app/styles/wiwo.scss
@import 'public/variables';

.wiwo {
  width: 100%;

  @media (min-width: $screen-lg-min) {
    max-width: 1414.16171px;
  }

  .intro-heading {
    float: left;
    margin-bottom: 2 * $main-margin;
    transition: $ease-out-quint-slow;
    width: 66.666666%;
  }

  h1 {
    font-size: 36px;
    margin-bottom: 24px;
    margin-top: 0;

    + p {
      margin-top: 0;
    }
  }

  p.intro {
    font-size: 24px;
    font-weight: 100;
  }

  .row {
    &:first-of-type {
      margin-top: 2 * $main-margin;

      @media (max-width: (1035px - 1)) {
        .project-tile {
          border-bottom: 0 !important;
        }
      }
    }

    &:last-of-type {
      margin-bottom: 2 * $main-margin - $main-margin / 2;

      @media (max-width: $screen-xs-max) {
        margin-bottom: -$main-margin / 2;
      }

      .project-tile {
        border-bottom: 1px solid rgba($white, .07);
      }
    }
  }

  .project-tile {
    border: 1px solid rgba($white, .07);
    border-bottom: 0;
    border-right: 0;
    box-sizing: border-box;
    display: inline-block;
    float: left;
    min-height: 304.333333px;
    min-width: 291.333333px;
    padding: $main-margin / 2;
    position: relative;
    top: -$main-margin / 2 - 1px;
    transition: $ease-out-quint-slow;
    width: 33.333333%;

    &:hover {
      background-color: rgba($black, .97);
      color: $white;

      .callout-headline {
        color: $gold;
      }
    }

    @media (max-width: (1035px - 1)) {
      border: 1px solid rgba($white, .07) !important;
      border-bottom: 0 !important;
      width: 100%;
    }

    &:last-of-type {
      border-right: 1px solid rgba($white, .07);

      @media (max-width: (1035px - 1)) {
        border-bottom: 1px solid rgba($white, .07) !important;
      }
    }
  }

  .callout-headline {
    font-size: 10px;
    font-weight: 500;
    letter-spacing: 1px;
    margin-bottom: 24px;
    margin-top: 0;
    text-transform: uppercase;
    transition: $ease-out-quint-slow;
  }

  .callout-copy {
    margin-bottom: 0;
    margin-top: 24px;
  }

  .when,
  .what {
    display: block;
  }

  .when {
    font-size: 12px;
    font-weight: 500;
  }

  .what {
    font-weight: 200;
  }
}

